Refactor: Update business logic and services